--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -44,6 +44,9 @@
                         <ul id="notifications-container" class="dropdown-menu">
                         </ul>
                       </div>
+                    <button id="button4" class="btn ctm-btn-secondary mx-2" title="Music">
+                        <i id="music-icon" class="bi bi-volume-mute-fill button-image" alt="Button 4 Image"></i>
+                    </button>
                     <div id="lc-text"></div>
                 </div>
                 
