--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div id="logged-content" class="d-flex align-items-center">
                     <div class="btn-group dropstart">
-                        <div type="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <div id="notifications-toggle" type="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                             <i id="bell" class="fas fa-bell me-2"></i>
                         </div>
                         <ul id="notifications-container" class="dropdown-menu">
