some advances on notifications

--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -41,7 +41,7 @@
                         <div id="notifications-toggle" type="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                             <i id="bell" class="fas fa-bell me-2"></i>
                         </div>
-                        <ul id="notifications-container" class="dropdown-menu">
+                        <ul id="notifications-container" class="dropdown-menu ctm-text-light text-center">
                         </ul>
                       </div>
                     <button id="button4" class="btn ctm-btn-secondary mx-2" title="Music">
